--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,6 +24,11 @@ repos:
 
   - repo: local
     hooks:
+      - id: pipreqs
+        name: Update requirements.txt with pipreqs
+        entry: bash -c 'pipreqs . --force --encoding=utf-8 --ignore .venv,tests --savepath=requirements.txt'
+        language: system
+        types: [ python ]
       - id: pytest
         name: Run pytest
         entry: pytest
