feat: Add workflow state machine with session persistence
Phase 3 Implementation:
- Created interactive_workflow/state_machine.py module
- WorkflowState enum with 9 workflow states (INIT → COMPLETE/ERROR)
- WorkflowSession dataclass with save/load JSON persistence
- State transition validation and timestamp tracking
- Progress percentage calculation (0-100%)
- Session data management (key-value store)

Testing:
- Added 30 comprehensive tests (100% coverage)
- Tests for state transitions, persistence, validation
- Fixed pytest import issue (removed __init__.py from test dir)
- All 648 tests passing

Infrastructure:
- Added README.md (required by pyproject.toml)
- Configured packages in pyproject.toml for editable install
- Updated .gitignore for debug files

All linting (black, flake8, mypy) passes
Ready for Phase 4: Workflow Orchestrator

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,16 @@ dependencies = [
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.poetry]
+packages = [
+    { include = "utils" },
+    { include = "tab_converter" },
+    { include = "harmonica_pipeline" },
+    { include = "image_converter" },
+    { include = "tab_phrase_animator" },
+    { include = "interactive_workflow" }
+]
+
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.2.0"
 black = "^25.1.0"
